--- a/.travis.yml
+++ b/.travis.yml
@@ -61,7 +61,7 @@ jobs:
       compiler: clang
       addons: &clang38
         apt:
-          packages: ["clang-3.8", "g++-multilib", "libc6-dbg", "libc6-dbg:i386", "g++-6"]
+          packages: ["clang-3.8", "g++-multilib", "libc6-dbg", "libc6-dbg:i386", "g++-6", "astyle"]
           sources: *apt_sources
 
     # Then build different configurations and targets in parallel.
