--- a/.github/workflows/json.yml
+++ b/.github/workflows/json.yml
@@ -5,12 +5,12 @@ on:
     branches:
     - master
     paths:
-    - *.json
+    - "*.json"
   pull_request:
     branches:
     - master
     paths:
-    - *.json
+    - "*.json"
 
 jobs:
   build:
