--- a/gfx/RetroDaysTileset/tile_config.json
+++ b/gfx/RetroDaysTileset/tile_config.json
@@ -5612,10 +5612,7 @@
           "rotates": false
         },
         {
-          "id": [
-            "tr_shotgun_1",
-            "tr_shotgun_2"
-          ],
+          "id": [ "tr_shotgun_2", "tr_shotgun_2_1", "tr_shotgun_1" ],
           "fg": 860,
           "rotates": false
         },
