--- a/.github/workflows/pr-validator.yml
+++ b/.github/workflows/pr-validator.yml
@@ -12,4 +12,4 @@ jobs:
       - name: "Validate SUMMARY"
         uses: CleverRaven/pr-validator@master
         with:
-          description-regex: '.*SUMMARY.*'
+          description-regex: '^\s*`{0,3}SUMMARY: +(None|((Features|Content|Interface|Mods|Balance|Bugfixes|Performance|Infrastructure|Build|I18N) +".*"))`{0,3}\s*$'
