--- a/.github/workflows/json.yml
+++ b/.github/workflows/json.yml
@@ -17,3 +17,6 @@ jobs:
         fetch-depth: 10
     - name: JSON style check
       run: make style-json
+    - name: Display Corrections
+      if: failure()
+      run: git diff
