--- a/gfx/HitButton_iso/tile_config.json
+++ b/gfx/HitButton_iso/tile_config.json
@@ -4968,7 +4968,7 @@
           "fg": 1557
         },
         {
-          "id": ["whistle", "dog_whistle" ],
+          "id": ["whistle", "dog_whistle", "slide_whistle" ],
           "fg": 1558
         },
         {
