--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -263,6 +263,18 @@ android {
                 throw new GradleException("Keystore file " + keystoreProperties.getProperty("storeFile") + " was not found.\n")
             }
         }
+        if (keystoreProperties.getProperty('debug_storeFile') != null) {
+            if (file(keystoreProperties.getProperty('debug_storeFile')).exists()) {
+                debug {
+                    storeFile file(keystoreProperties.getProperty("debug_storeFile"))
+                    storePassword keystoreProperties.getProperty("debug_storePassword")
+                    keyAlias keystoreProperties.getProperty("debug_seyAlias")
+                    keyPassword keystoreProperties.getProperty("debug_keyPassword")
+                }
+            } else {
+                throw new GradleException("Keystore file " + keystoreProperties.getProperty("debug_storeFile") + " was not found.\n")
+            }
+        }
     }
     buildTypes {
         release {
@@ -281,7 +293,9 @@ android {
         debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-
+            if (signingConfigs.hasProperty("debug")) {
+                signingConfig signingConfigs.debug
+            }
             externalNativeBuild {
                 ndkBuild {
 
