--- a/.gitignore
+++ b/.gitignore
@@ -186,3 +186,14 @@ Xcode/
 /.flatpak-builder/
 /repo/
 /build-dir/
+
+# ignore for Variant JP
+
+# Mods
+/data/mods/Battle_Maid/*
+/data/mods/Littlemaid_For_Variant/*
+/data/mods/Vibrator_Junkyard/*
+
+# language
+/lang/po/ja_variant.po
+
