--- a/data/json/items/ammo/700nx.json
+++ b/data/json/items/ammo/700nx.json
@@ -7,7 +7,8 @@
     "weight": "80 g",
     "volume": "250 ml",
     "price": 5700,
-    "price_postapoc": 75000,
+    "price_postapoc": 2000,
+	"flags": [ "IRREPLACEABLE_CONSUMABLE" ],
     "material": [ "brass", "powder" ],
     "symbol": "=",
     "color": "dark_gray",
@@ -27,8 +28,9 @@
     "copy-from": "700nx",
     "type": "AMMO",
     "name": { "str": ".700 NX, reloaded" },
+
     "proportional": { "price": 0.7, "damage": 0.9, "dispersion": 1.1 },
     "extend": { "effects": [ "RECYCLED" ] },
-    "delete": { "effects": [ "NEVER_MISFIRES" ] }
+    "delete": { "effects": [ "NEVER_MISFIRES" ], "flags": [ "IRREPLACEABLE_CONSUMABLE" ]   }
   }
 ]
