--- a/data/json/requirements/cooking_components.json
+++ b/data/json/requirements/cooking_components.json
@@ -475,6 +475,7 @@
         [ "pineapple", 1 ],
         [ "plums", 1 ],
         [ "pomegranate", 1 ],
+        [ "pumpkin", 1 ],
         [ "raspberries", 1 ],
         [ "rose_hips", 1 ],
         [ "strawberries", 1 ],
@@ -506,6 +507,7 @@
         [ "irradiated_orange", 1 ],
         [ "irradiated_papaya", 1 ],
         [ "irradiated_peach", 1 ],
+        [ "irradiated_pumpkin", 1 ],
         [ "irradiated_pear", 1 ],
         [ "irradiated_pineapple", 1 ],
         [ "irradiated_plums", 1 ],
